# signal-box-sim

./: .gitignore  .gitmodules  Cargo.toml  README.md  TODO.md  build.rs  mkdocs.yml  signal-box-sim.code-workspace
docs/: .gitignore  hugo.toml  index.md
docs/content/static_model/: _index.md
src/: build_info.rs  lib.rs  main.rs  model.rs  parser.rs  routes.rs  svg_render.rs  track_groups.rs
src/elements/: inner.rs  mod.rs
src/parser/: lexer.rs
src/parser/lexer/: lexer_rules.rs
src/routing/: elements.rs  mod.rs  pathfinder.rs
src/svg_render/: crossing_and_tunnels.rs  points_and_derailer.rs  track_and_curves.rs
src/track_graph/: algorithm.rs  extensions.rs  graph.rs  mod.rs  nodes.rs
src/track_graph/graph/: algorithm.rs
tests/: graph.rs
