[package]
name = "signal-box-sim"
version = "0.0.0"
edition = "2024"
description = "N/A"
readme = "README.md"
repository = "N/A"
license = "EUPL-1.2"
publish = false

[dependencies]
env_logger = "0.11.8"
log = "0.4.27"
once_cell = "1.21.3"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
