[package]
name = "signal-box-sim"
version = "0.0.0"
edition = "2024"
description = "N/A"
readme = "README.md"
repository = "https://github.com/jonathan-schild/signal-box-sim"
license = "EUPL-1.2"
publish = false

[dependencies]
env_logger = "0.11.8"
log = "0.4.27"
once_cell = "1.21.3"
petgraph = "0.8.2"
regex = "1.11.1"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
uuid = { version = "1.17.0", features = ["serde"] }